--- a/CalculadorasLp4/app/src/main/AndroidManifest.xml
+++ b/CalculadorasLp4/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -68,7 +69,8 @@
         <activity
             android:name=".PlayersDetailActivity"
             android:label="@string/title_activity_players_detail"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AnimationActivity"></activity>
     </application>
 
 </manifest>
